--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+<div container = "main">
 	<h1>Noah Griff</h1>
 	<p>I'm hosted with GitHub Pages.</p>
+	</div>
 </body>
 </html>
