--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 
 <nav class="navbar navbar-inverse navbar-static-top">
-  <div class="container">
+ <!--  <div class="container">
     <div class="navbar-header">
       <button
         type="button"
@@ -45,7 +45,7 @@
         <li><a href="#">Contact</a></li>
       </ul>
     </div>
-  </div>
+  </div> -->
 </nav>
 
 
