--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 
 <nav class="navbar navbar-inverse navbar-static-top">
- <!--  <div class="container">
+  <div class="container">
     <div class="navbar-header">
       <button
         type="button"
@@ -24,7 +24,7 @@
       <a class="navbar-brand" href="#">Balance Web Development</a>
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav navbar-right">
+      <!-- <ul class="nav navbar-nav navbar-right">
         <li><a href="#">About</a></li>
         <li class="dropdown">
           <a
@@ -43,9 +43,9 @@
           </ul>
         </li>
         <li><a href="#">Contact</a></li>
-      </ul>
+      </ul> -->
     </div>
-  </div> -->
+  </div>
 </nav>
 
 
