--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <a class="navbar-brand" href="#">Balance Web Development</a>
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <!-- <ul class="nav navbar-nav navbar-right">
+      <ul class="nav navbar-nav navbar-right">
         <li><a href="#">About</a></li>
         <li class="dropdown">
           <a
@@ -43,7 +43,7 @@
           </ul>
         </li>
         <li><a href="#">Contact</a></li>
-      </ul> -->
+      </ul> 
     </div>
   </div>
 </nav>
