--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 </nav>
 
-    <h1>Hello, world!</h1>
+    <!-- <h1>Hello, world!</h1> -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
