--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 
   <!-- Masthead -->
   <header class="masthead bg-primary text-white text-center">
+  <div class = "test">
     <div class="container d-flex align-items-center flex-column">
 
       <!-- Masthead Avatar Image -->
@@ -63,6 +64,7 @@
           <i class="fas fa-star"></i>
         </div>
         <div class="divider-custom-line"></div>
+      </div>
       </div>
 
       <!-- Masthead Subheading -->
