--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
   <!-- Theme CSS -->
   <link href="css/freelancer.min.css" rel="stylesheet">
+  <link href="css/styles.css" rel="stylesheet">
 
 </head>
 
@@ -47,9 +48,10 @@
   </nav>
 
   <!-- Masthead -->
-  <header class="masthead bg-primary text-white text-center">
-  <div class = "test">
-    <div class="container d-flex align-items-center flex-column">
+  <div id = "test">
+  <header class="masthead text-white text-center" id ="masthead">
+  
+    <div class="container d-flex align-items-center flex-column" id= "random">
 
       <!-- Masthead Avatar Image -->
       <img class="masthead-avatar mb-5" src="img/avataaars.svg" alt="">
@@ -74,7 +76,7 @@
   </header>
 
   <!-- Portfolio Section -->
-  <section class="page-section portfolio" id="portfolio">
+  <section class="page-section portfolio bg-primary" id="portfolio">
     <div class="container">
 
       <!-- Portfolio Section Heading -->
@@ -274,14 +276,13 @@
       <div class="row">
 
         <!-- Footer Location -->
-        <div class="col-lg-4 mb-5 mb-lg-0">
+        <div class="col-lg-6 mb-5 mb-lg-0">
           <h4 class="text-uppercase mb-4">Location</h4>
-          <p class="lead mb-0">2215 John Daniel Drive
-            <br>Clark, MO 65243</p>
+          <p class="lead mb-0">10308 Cavanaugh Court, Rockville Maryland</p>
         </div>
 
         <!-- Footer Social Icons -->
-        <div class="col-lg-4 mb-5 mb-lg-0">
+        <div class="col-lg-6 mb-5 mb-lg-0">
           <h4 class="text-uppercase mb-4">Around the Web</h4>
           <a class="btn btn-outline-light btn-social mx-1" href="#">
             <i class="fab fa-fw fa-facebook-f"></i>
@@ -289,20 +290,15 @@
           <a class="btn btn-outline-light btn-social mx-1" href="#">
             <i class="fab fa-fw fa-twitter"></i>
           </a>
-          <a class="btn btn-outline-light btn-social mx-1" href="#">
+          <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/noah-griff-249826170/">
             <i class="fab fa-fw fa-linkedin-in"></i>
           </a>
           <a class="btn btn-outline-light btn-social mx-1" href="#">
             <i class="fab fa-fw fa-dribbble"></i>
           </a>
-        </div>
+        </div> 
 
-        <!-- Footer About Text -->
-        <div class="col-lg-4">
-          <h4 class="text-uppercase mb-4">About Freelancer</h4>
-          <p class="lead mb-0">Freelance is a free to use, MIT licensed Bootstrap theme created by
-            <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
-        </div>
+       
 
       </div>
     </div>
@@ -311,7 +307,7 @@
   <!-- Copyright Section -->
   <section class="copyright py-4 text-center text-white">
     <div class="container">
-      <small>Copyright &copy; Your Website 2019</small>
+      <small>Copyright &copy; Noah Griff</small>
     </div>
   </section>
 
