--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div class="container d-flex align-items-center flex-column" id= "random">
 
       <!-- Masthead Avatar Image -->
-      <img class="masthead-avatar mb-5" src="img/avataaars.svg" alt="">
+      <img class="masthead-avatar rounded-circle mb-5" src="img/Noah.png" alt="">
 
       <!-- Masthead Heading -->
       <h1 class="masthead-heading text-uppercase mb-0">Noah Griff</h1>
