--- a/index.html
+++ b/index.html
@@ -179,11 +179,45 @@
             Ruby,
           </li>
           <li class="list-inline-item">
-            Ocaml
+            <!-- <abbr title="Hyper Text Markup Language">HTML</abbr> -->
+            OCaml
           </li>
-          <!-- <li class="list-inline-item">
-            <i class="fab fa-java"></i>
-          </li>
+          
+         <!--  <li class="list-inline-item">
+            <div class="img-container">
+              <i class="fab fa-java"></i>
+              <div class="middle">
+                <div class="img-text">Java</div>
+          </div>
+          </div>
+          </li> 
+           <li class="list-inline-item">
+            <div class="img-container">
+              <i class="fab fa-html5"></i>
+              <div class="middle">
+                <div class="img-text">HTML</div>
+          </div>
+          </div>
+          </li> 
+  
+           <li class="list-inline-item">
+            <div class="img-container">
+              <i class="fab fa-css3-alt"></i>
+              <div class="middle">
+                <div class="img-text">CSS</div>
+          </div>
+          </div>
+          </li>  --><!--
+
+  
+          <div class="container">
+  <img src="img_avatar.png" alt="Avatar" class="image" style="width:100%">
+  <div class="middle">
+    <div class="text">John Doe</div>
+  </div>
+</div>
+
+
           <li class="list-inline-item">
             <i class="fab fa-python"></i>
           </li>
@@ -217,7 +251,7 @@
         </ul>
 
         <h5 class="subheading mb-3">Proficient</h5>
-        <ul >
+        <ul class="dev-icons" >
           <li class="list-inline-item">
           Html,
         </li>
@@ -323,7 +357,7 @@
   <!-- <script src="js/custom.js"></script> -->
   <script>
 
-    var example = ["Colour Distribution Technician","Highway Environmental Hygienist", "Media Distribution Officer","Recycling Operative","Beverage Dissemination Officer", "Noah Griff"];
+    var example = ["Media Distribution Officer","Recycling Operative", "Noah Griff"];
 
         textSequence(0);
         function textSequence(i) {
